Added normal working cli, please fill in the remaining test use-cases, also added the game-over test case